--- a/templates/form.html
+++ b/templates/form.html
@@ -22,7 +22,9 @@
         body {
             /* background: linear-gradient(145deg, rgb(185, 255, 193), rgb(171, 209, 255)); */
             background: rgb(255, 238, 216);
-
+            font-family: Arial, Helvetica, sans-serif;
+            font-weight: 700;
+            font-size: 20px;
         }
 
         #login-card {
