fixed text print

--- a/templates/view.html
+++ b/templates/view.html
@@ -178,7 +178,7 @@
     </section>
 
     <section>
-        <textarea placeholder="Remember, be nice!. Enter Text Here"></textarea>
+        <textarea >{result.content}</textarea>
     </section>
 </body>
 
