fixed view html

--- a/templates/view.html
+++ b/templates/view.html
@@ -181,7 +181,7 @@
 
 
     <section>
-        <textarea placeholder="Remember, be nice!. Enter Text Here"></textarea>
+        <textarea >{result.content}</textarea>
     </section>
 </body>
 
