--- a/templates/view.html
+++ b/templates/view.html
@@ -181,7 +181,7 @@
 
 
     <section>
-        <textarea >{result.content}</textarea>
+        <textarea >{{result.content}}</textarea>
     </section>
 </body>
 
